--- a/Decorator.Revamp/Decorator.Revamp.csproj
+++ b/Decorator.Revamp/Decorator.Revamp.csproj
@@ -13,4 +13,9 @@
     <LangVersion>7.1</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.CSharp" Version="4.5.0" />
+    <PackageReference Include="System.Reflection.Emit.Lightweight" Version="4.3.0" />
+  </ItemGroup>
+
 </Project>
