--- a/Decorator.Revamp.Tests/Decorator.Revamp.Tests.csproj
+++ b/Decorator.Revamp.Tests/Decorator.Revamp.Tests.csproj
@@ -10,7 +10,7 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <LangVersion>7.1</LangVersion>
-    <Optimize>false</Optimize>
+    <Optimize>true</Optimize>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
