--- a/Decorator.Revamp/Decorator.Revamp.csproj
+++ b/Decorator.Revamp/Decorator.Revamp.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="System.Reflection.Emit.Lightweight" Version="4.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Serializer\" />
+  </ItemGroup>
+
 </Project>
