code's a mess but wayy faster
- infact, 50ns faster then ProtocolMessage :)
- i plan to clean this up within a few days
- then release a new version hopefully within 2 weeks

--- a/Decorator.Benchmarks/Decorator.Benchmarks.csproj
+++ b/Decorator.Benchmarks/Decorator.Benchmarks.csproj
@@ -5,6 +5,14 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <LangVersion>7.1</LangVersion>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <LangVersion>7.1</LangVersion>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="benchmarkdotnet" Version="0.11.1" />
   </ItemGroup>
