--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,7 +21,7 @@ build_script:
 test_script:
  - .\packages\OpenCover.4.6.519\tools\OpenCover.Console.exe -register:user -target:"%xunit20%\xunit.console.x86.exe" -targetargs:"Decorator.Tests/bin/Release/netcoreapp2.1/Decorator.Tests.dll -noshadow" -output:"coverage.xml" -filter:"+[Decorator*]* -[Decorator.Tests*]*"
 
-after_build:
+after_test:
   - ps: |
       $env:PATH = 'C:\msys64\usr\bin;' + $env:PATH
       Invoke-WebRequest -Uri 'https://codecov.io/bash' -OutFile codecov.sh
