--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,7 +25,7 @@ test_script:
   - cmd: dotnet test -c Release /p:CollectCoverage=true Decorator.Tests\
   - ps: |
         curl -s https://codecov.io/bash > codecov
-        ./codecov -f Decorator.Tests\coverage.json
+        ./codecov -f .\Decorator.Tests\coverage.json
 
 artifacts:
  - path: 'Decorator\bin\Release\netstandard2.0\'
