--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,7 +19,7 @@ build_script:
   - dotnet build -c %CONFIGURATION% "Decorator\Decorator.csproj"
   
 test_script:
-  - nuget install OpenCover -Version 4.6.519 -OutputDirecotry packages
+  - nuget install OpenCover -Version 4.6.519 -OutputDirectory packages
   - packages\OpenCover.4.6.519\tools\OpenCover.Console.exe -register:user "-target:%ProgramFiles%\dotnet\dotnet.exe" "-targetargs:test Decorator.Tests\Decorator.Tests.csproj" -returntargetcode "-filter:+[Decorator]*" -hideskipped:All -output:./coverage.xml -oldStyle
   - ps: curl -s https://codecov.io/bash > codecov
   - ps: ./codecov -f .\coverage.xml
