--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,10 +19,14 @@ build_script:
   - dotnet build -c %CONFIGURATION% "Decorator\Decorator.csproj"
   
 test_script:
-  - nuget install OpenCover -Version 4.6.519 -OutputDirectory packages
-  - packages\OpenCover.4.6.519\tools\OpenCover.Console.exe -register:user "-target:%ProgramFiles%\dotnet\dotnet.exe" "-targetargs:test Decorator.Tests\Decorator.Tests.csproj" -returntargetcode "-filter:+[Decorator]*" -hideskipped:All -output:./coverage.xml -oldStyle
-  - ps: Invoke-WebRequest -Uri https://codecov.io/bash -OutFile codecov.sh
-  - ps: ./codecov.sh -f .\coverage.xml
+    - ps: |
+      if ($env:CONFIGURATION -eq 'Debug')
+      {
+          & nuget install OpenCover -Version 4.6.519 -OutputDirectory packages
+          & packages\OpenCover.4.6.519\tools\OpenCover.Console.exe -register:user "-target:%ProgramFiles%\dotnet\dotnet.exe" "-targetargs:test Decorator.Tests\Decorator.Tests.csproj" -returntargetcode "-filter:+[Decorator]*" -hideskipped:All -output:./coverage.xml -oldStyle
+          & nuget install Codecov -Version 1.0.3 -OutputDirectory packages
+          & packages\Codecov.1.0.3\tools\codecov.exe -f "coverage.xml"
+      }
 
 artifacts:
  - path: 'Decorator\bin\%CONFIGURATION%\*.nupkg'
