fix appveyor build (2)
try 2

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,7 +14,7 @@ init:
 
 before_build:
   - dotnet restore
-  - cmd: rename "Decorator\travis-ci.snk" "Decorator\decorator-sig.snk"
+  - cmd: rename "Decorator\travis-ci.snk" "decorator-sig.snk"
 
 build_script:
   - dotnet build -c %CONFIGURATION% "Decorator\Decorator.csproj"
