--- a/Decorator.Benchmarks/Decorator.Benchmarks.csproj
+++ b/Decorator.Benchmarks/Decorator.Benchmarks.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="benchmarkdotnet" Version="0.11.1" />
+    <PackageReference Include="ConcurrentHashcodeDictionary" Version="1.1.1" />
   </ItemGroup>
 
   <ItemGroup>
