--- a/Decorator.Tests/Decorator.Tests.csproj
+++ b/Decorator.Tests/Decorator.Tests.csproj
@@ -44,4 +44,10 @@
     <ProjectReference Include="..\Decorator\Decorator.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="xunit.runner.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
