benchmark stuff, slight BlankMessage

--- a/Decorator.Benchmarks/Decorator.Benchmarks.csproj
+++ b/Decorator.Benchmarks/Decorator.Benchmarks.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\Decorator\Decorator.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Competetors\LukeMDeserialiser\" />
+  </ItemGroup>
+
 </Project>
