--- a/Decorator.Benchmarks/Decorator.Benchmarks.csproj
+++ b/Decorator.Benchmarks/Decorator.Benchmarks.csproj
@@ -14,7 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="benchmarkdotnet" Version="0.11.1" />
+    <PackageReference Include="BenchmarkDotNet" Version="0.11.1" />
     <PackageReference Include="ConcurrentHashcodeDictionary" Version="1.1.1" />
   </ItemGroup>
 
