--- a/Decorator.Benchmarks/Decorator.Benchmarks.csproj
+++ b/Decorator.Benchmarks/Decorator.Benchmarks.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.11.1" />
     <PackageReference Include="ConcurrentHashcodeDictionary" Version="1.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="2.1.2" />
   </ItemGroup>
 
   <ItemGroup>
