--- a/Decorator.Serialize.Tests/Decorator.Serialize.Tests.csproj
+++ b/Decorator.Serialize.Tests/Decorator.Serialize.Tests.csproj
@@ -14,12 +14,16 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
     <PackageReference Include="OpenCover" Version="4.6.519" />
     <PackageReference Include="ReportGenerator" Version="4.0.0" />
-    <PackageReference Include="xunit" Version="2.3.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
+    <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Decorator.Serialize\Decorator.Serialize.csproj" />
+    <ProjectReference Include="..\Decorator.Tests\Decorator.Tests.csproj" />
   </ItemGroup>
 
 </Project>
