--- a/Decorator/Decorator.csproj
+++ b/Decorator/Decorator.csproj
@@ -22,9 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Decorator.Attributes\Decorator.Attributes.csproj" />
-    <ProjectReference Include="..\Decorator.Exceptions\Decorator.Exceptions.csproj" />
-    <ProjectReference Include="..\Decorator.ModuleAPI\Decorator.ModuleAPI.csproj" />
+    <ProjectReference Include="..\Decorator.Converter\Decorator.Converter.csproj" />
     <ProjectReference Include="..\Decorator.Modules\Decorator.Modules.csproj" />
   </ItemGroup>
 
