--- a/Decorator.Examples/Decorator.Examples.csproj
+++ b/Decorator.Examples/Decorator.Examples.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="newtonsoft.json" Version="9.0.1" />
+    <PackageReference Include="newtonsoft.json" Version="12.0.1-beta1" />
   </ItemGroup>
 
   <ItemGroup>
